--- a/homestay/package.json
+++ b/homestay/package.json
@@ -10,15 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^17.0.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.9",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-range": "^1.10.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.9.0",
+    "react-toastify": "^11.0.3",
     "redux-persist": "^6.0.0",
-    "sass": "^1.80.6"
+    "sass": "^1.80.6",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
