--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb+srv://user_0:abCdijk@cluster0.4ffli.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-JWT_SECRET="PASSWORDSECRETKEY"
+MONGO_URL="mongodb+srv://Homestay:7thsemproject@cluster0.kwkex.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+PORT=3001
+JWT_SECRET=your_secret_key
